--- a/public/Folding_In_Origami.html
+++ b/public/Folding_In_Origami.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <header>
+    <head>
         <title>Oricentric</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="../styles.css">
         <link rel="icon" type="image/png" href="../assets/Oricentric_logo(transparent).png">
         <script src="script.js"></script>
-    </header>
+    </head>
 
     <style>
         .grid {
@@ -72,43 +72,34 @@
             <div class="box">
                 <h3>Valley fold</h3>
                 <p>The paper is folded towards you, forming a “v" shape. it’s the foundation of almost every origami model.</p>
-                <img src="../assets/valley-placeholder.png" alt="valley fold">
             </div>
             <div class="box">
                 <h3>Mountain fold</h3>
                 <p>The paper is folded away from you, forming an upside down “v” shape. often paired with valley folds to form 3d structures.</p>
-                <img src="../assets/mountain-placeholder.png" alt="mountain fold">
             </div>
             <div class="box">
                 <h3>Pleat fold</h3>
                 <p>Two parallel folds in opposite directions, creating what looks like an accordion. useful for layering and shaping.</p>
-                <img src="../assets/pleat-placeholder.png" alt="pleat fold">
             </div>
             <div class="box">
                 <h3>Squash fold</h3>
                 <p>A flap is opened and pressed flat to form a triangular or pointed shape. widely used in cranes and flowers.</p>
-                <img src="../assets/squash-placeholder.png" alt="squash fold">
             </div>
             <div class="box">
                 <h3>Reverse fold (inside/outside)</h3>
                 <p>A flap is folded along an existing crease inward or outward. commonly used to create limbs, beaks, or tails.</p>
-                <img src="../assets/reverse-placeholder.png" alt="reverse fold">
             </div>
             <div class="box">
                 <h3>Rabbit ear fold</h3>
                 <p>A combination of folds forming a pointed flap resembling a rabbit’s ear, often used for legs, ears, or markings.</p>
-                <img src="../assets/rabbit-ear-placeholder.png" alt="rabbit ear fold">
             </div>
             <div class="box">
                 <h3>Crimp fold</h3>
                 <p>Two folds in opposite directions close together, forming a zigzag. used for claws, wings, or intricate features.</p>
-                <img src="../assets/crimp-placeholder.png" alt="crimp fold">
             </div>
             <div class="box">
                 <h3>Petal fold</h3>
                 <p>A flap is lifted and folded into a point using valley and mountain folds. essential for making flower petals.</p>
-                <img src="../assets/petal-placeholder.png" alt="petal fold">
-            </div>
         </div>
     </section>
 
@@ -129,7 +120,7 @@
                 <img src="../assets/ruler.webp" alt="ruler">
             </div>
             <div class="box">
-                <h3>Double-sided tape</h3>
+                <h3>Double sided tape</h3>
                 <img src="../assets/doublesidedtape.webp" alt="double-sided tape">
             </div>
         </div>
