--- a/public/References&Resources.html
+++ b/public/References&Resources.html
@@ -8,6 +8,7 @@
         <meta name="author" content="Brandon Timothy P. Fernando & Rei Annica P. Francisco">
         <meta name="keywords" content="HTML, CSS, JavaScript, Web Development Oricentric, Origami, Paper Crafts" >
         <link rel="stylesheet" href="../styles.css">
+        <link rel="icon" type="image/png" href="../assets/Oricentric_logo(transparent).png">
         <script src="../script.js"></script>
         <style>
 
@@ -163,6 +164,11 @@
 
             <p> &copy; 2025 Oricentric — Fernando & Francisco</p>
 
-        </footer>    
+        </footer>   
+        <script>
+            /* hotkeys for navigation between pages
+            hold shift plus a key to go to a specific page
+            five hotkeys are currently implemented */
+        </script>   
     </body>
 </html>
