waitwhatchanges didi do i forgot

--- a/public/index.html
+++ b/public/index.html
@@ -279,24 +279,30 @@
             <!-- Left -->
             <div id="footerbox"> 
                 <div id="footercontacts">
+                    <div id="addressMe">
                         <p> <i>Address:</i> Philippine Science High School - Main Campus, Agham Road, Diliman, Quezon City, Philippines </p>
-                    <ul> <p> <i>Email Addresses:</i> </p> 
-                        <li> <i> Fernando </i>b2029btpfernando@pshs.edu.ph </li>
-                        <li> <i> Francisco:</i> b2029rapfrancisco@pshs.edu.ph </li>
-                    </ul>
+                    </div>
+                    <div id="emailaddressMe">
+                        <ul> <p> <i>Email Addresses:</i> </p> 
+                            <li> <i> Fernando </i>b2029btpfernando@pshs.edu.ph </li>
+                            <li> <i> Francisco:</i> b2029rapfrancisco@pshs.edu.ph </li>
+                        </ul>
+                    </div>
                 </div>
 
                 <!-- Right -->
 
                 <div id="footersocialmedia">
-                    <ul> 
-                        <p> <i>Social Media:</i> </p>
-                        <li> Facebook: Brandon Fernando  ||  Rei Annica Francisco </li>
-                    </ul>
+                    <div id = "facBook">
+                        <ul> 
+                            <p> <i>Social Media:</i> </p>
+                            <li> Facebook: Brandon Fernando  ||  Rei Annica Francisco </li>
+                        </ul>
+                    </div>
                 </div>
                 
                 <div id="footerlogoimg">
-                    <img src="Oricentric_logo(transparent).png" alt="Oricentric Logo" width="267px">
+                    <img src="../assets/Oricentric_logo(transparent).png" alt="Oricentric Logo" width="267px">
                 </div>
             </div>
 
