--- a/public/index.html
+++ b/public/index.html
@@ -171,6 +171,8 @@
 
             <h1> Oricentric </h1>
             <h2> The Art of Folds </h2>
+
+            <button id ="toggleTheme" onclick="toggleTheme()"> Toggle Dark Mode </button>
           
         </header>
         
