--- a/public/Origami_Exhibit.html
+++ b/public/Origami_Exhibit.html
@@ -8,6 +8,7 @@
         <meta name="author" content="Brandon Timothy P. Fernando & Rei Annica P. Francisco">
         <meta name="keywords" content="HTML, CSS, JavaScript, Web Development Oricentric, Origami, Paper Crafts" >
         <link rel="stylesheet" href="../styles.css">
+                <link rel="icon" type="image/png" href="../Oricentric_logo.png">
         <script src="../script.js" defer></script>
         <style>
 
