--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="The home page of Oricentric">
         <meta name="author" content="Brandon Timothy P. Fernando & Rei Annica P. Francisco">
         <meta name="keywords" content="HTML, CSS, JavaScript, Web Development Oricentric, Origami, Paper Crafts" >
-        <link rel="icon" type="image/png" href="/Oricentric_logo(transparent).png">
+        <link rel="icon" type="image/png" href="../assets/Oricentric_logo(transparent).png">
         <link rel="stylesheet" href="../styles.css">
         <script src="../script.js"></script>
 <!-- https://github.com/rapfrancisco/WDProjMgFernandoFrancisco.git--    -->
