--- a/public/Folding_In_Origami.html
+++ b/public/Folding_In_Origami.html
@@ -134,7 +134,7 @@
                 <li><a href="Folding_In_Origami.html">FOLDING IN ORIGAMI</a></li>
                 <li><a href="References&Resources.html">RESOURCES</a></li>
             </ul>
-            <aside class="hotkeys">
+           <aside class="hotkeys">
                 <h4> Hotkeys </h4>
                 <ul>
                     <li> <p> <kbd>Shift</kbd> + <kbd>B</kbd> - HOME </p> </li>
@@ -142,11 +142,7 @@
                     <li> <p> <kbd>Shift</kbd> + <kbd>E</kbd> - EXHIBIT</p> </li>
                     <li> <p> <kbd>Shift</kbd> + <kbd>M</kbd> - MECHANISMS </p> </li>    
                     <li> <p> <kbd>Shift</kbd> + <kbd>R</kbd> - RESOURCES </p></li>    
-                    <li> <p> <kbd>Shift
-                        
-                    </kbd> + <kbd>T</kbd> - THEME </p> </li>    
-                    <li> <p> <kbd>Shift</kbd> + <kbd>P</kbd> - PLAY </p> </li>    
-                    <li> <p> <kbd>Shift</kbd> + <kbd>U</kbd> - MUTE </p> </li>    
+                    <li> <p> <button id ="toggleTheme" onclick="toggleTheme()"> Toggle Dark Mode </button> </p>
                 </ul>
             </aside>
         </nav>
