--- a/public/History_Of_Origami.html
+++ b/public/History_Of_Origami.html
@@ -174,17 +174,12 @@
             <aside class="hotkeys">
                 <h4> Hotkeys </h4>
                 <ul>
-                
                     <li> <p> <kbd>Shift</kbd> + <kbd>B</kbd> - HOME </p> </li>
                     <li> <p> <kbd>Shift</kbd> + <kbd>H</kbd> - HISTORY </p> </li>   
                     <li> <p> <kbd>Shift</kbd> + <kbd>E</kbd> - EXHIBIT</p> </li>
                     <li> <p> <kbd>Shift</kbd> + <kbd>M</kbd> - MECHANISMS </p> </li>    
                     <li> <p> <kbd>Shift</kbd> + <kbd>R</kbd> - RESOURCES </p></li>    
-                    <li> <p> <kbd>Shift
-                        
-                    </kbd> + <kbd>T</kbd> - THEME </p> </li>    
-                    <li> <p> <kbd>Shift</kbd> + <kbd>P</kbd> - PLAY </p> </li>    
-                    <li> <p> <kbd>Shift</kbd> + <kbd>U</kbd> - MUTE </p> </li>    
+                    <li> <p> <button id ="toggleTheme" onclick="toggleTheme()"> Toggle Dark Mode </button> </p>
                 </ul>
             </aside>
         </nav>
@@ -222,7 +217,7 @@
 
                     <div class="timeline-image">
                         <figure>
-                            <img src="../assets/origmihistoryimage1.png" alt="Ancient illustration of people around a table, most likely early use of paper" width="500px">
+                            <img src="../assets/origamihistoryimage1.png" alt="Ancient illustration of people around a table, most likely early use of paper" width="500px">
                             <figcaption>
                                 Paper folding traditions began in Japan shortly after Buddhist monks brought paper from China around the 6th Century. 
                             </figcaption>
@@ -276,7 +271,10 @@
 
                 <article id = "globalInfluence" class="timeline-item"> 
                     <div class="timeline-point"></div>
+
                     <div class="timeline-content">
+                        <div class = "timeline-text"> 
+
                     <h3> Global Influence and Origami Spreading Worldwide </h3>
                     <p>
                         The tradition of paper folding had also independently developed in Europe in the 11th or 12th century in Spain and Germany, 
@@ -300,12 +298,25 @@
                         Modular origami is another origami technique that uses multiple folded shapes to form larger constructions, 
                         wet folding allows creations to have more curved shapes, and action origami allows origami to move such as jumping frogs. 
                     </p>
+                    </div>
+                    <div class="timeline-image">
+                            <figure>
+                                <img src="../assets/origamihistoryimage5.png" alt="Origami Folding" width="800px">
+                                <figcaption> Origami Folding </figcaption>
+                            </figure>
+
+                            <figure>
+                                <img src="../assets/origamihistoryimage6.png" alt="A picture of Aira Yoshizawa" width="750px">
+                                <figcaption> A picture of Akira Yoshizawa </figcaption>
+                            </figure>
+                        </div>
                 </div>
                 </article>
 
                 <article id = "modernApplications" class="timeline-item"> 
                     <div class="timeline-point"></div>
                     <div class="timeline-content">
+                        <div class = "timeline-text"> 
                     <h3> Modern Applications inspiring Architecture and Robotics </h3>
                     <p>
                         While origami is usually seen on tables or displayed as art, it also has many modern applications in Science. 
@@ -323,18 +334,21 @@
                         allowing telescopes to capture clearer images of distant exoplanets. 
                     </p>
                     </div>
+                    <div class="timeline-image">
+                            <figure>
+                                <img src="../assets/origamihistoryimage7.png" alt="Jumping Frog" width="1000px">
+                                <figcaption> An Origami Jumping Frog </figcaption>
+                            </figure>
+
+                            <figure>
+                                <img src="../assets/origamihistoryimage8.png" alt="Solar panels" width="1000px">
+                                <figcaption> Solar panels applying origami </figcaption>
+                            </figure>
+                        </div>
+                    </div>
                 </article>
             </div>
         </section>
-
-        <section id="significance">
-        <!-- txt for significance of origami in culture and art -->
-        </section>
-
-        <section id="innovators">
-        <!-- txt for notable innovators in origami history -->
-        </section>
-
 
         <section id="finalMessage">
             <p> 
