--- a/public/Preferences_Forum.html
+++ b/public/Preferences_Forum.html
@@ -25,19 +25,16 @@
             <li><a href="References&Resources.html">RESOURCES</a></li>
         </ul>
         <aside class="hotkeys">
-            <h4> Hotkeys </h4>
-            <ul>
-                <li> <p> <kbd>Shift</kbd> + <kbd>B</kbd> - HOME </p> </li>
-                <li> <p> <kbd>Shift</kbd> + <kbd>H</kbd> - HISTORY </p> </li>   
-                <li> <p> <kbd>Shift</kbd> + <kbd>E</kbd> - EXHIBIT</p> </li>
-                <li> <p> <kbd>Shift</kbd> + <kbd>M</kbd> - MECHANISMS </p> </li>    
-                <li> <p> <kbd>Shift</kbd> + <kbd>R</kbd> - RESOURCES </p></li>    
-                    
-                <li> <p> <kbd>Shift</kbd> + <kbd>T</kbd> - THEME </p>
-                <li> <p> <kbd>Shift</kbd> + <kbd>P</kbd> - PLAY [Unfinished] </p> </li>    
-                <li> <p> <kbd>Shift</kbd> + <kbd>U</kbd> - MUTE [Unfinished] </p> </li>    
-            </ul>
-        </aside>
+                <h4> Hotkeys </h4>
+                <ul>
+                    <li> <p> <kbd>Shift</kbd> + <kbd>B</kbd> - HOME </p> </li>
+                    <li> <p> <kbd>Shift</kbd> + <kbd>H</kbd> - HISTORY </p> </li>   
+                    <li> <p> <kbd>Shift</kbd> + <kbd>E</kbd> - EXHIBIT</p> </li>
+                    <li> <p> <kbd>Shift</kbd> + <kbd>M</kbd> - MECHANISMS </p> </li>    
+                    <li> <p> <kbd>Shift</kbd> + <kbd>R</kbd> - RESOURCES </p></li>    
+                    <li> <p> <button id ="toggleTheme" onclick="toggleTheme()"> Toggle Dark Mode </button> </p>
+                </ul>
+            </aside>
     </nav>
 
     <header>
