--- a/public/References&Resources.html
+++ b/public/References&Resources.html
@@ -73,11 +73,7 @@
                     <li> <p> <kbd>Shift</kbd> + <kbd>E</kbd> - EXHIBIT</p> </li>
                     <li> <p> <kbd>Shift</kbd> + <kbd>M</kbd> - MECHANISMS </p> </li>    
                     <li> <p> <kbd>Shift</kbd> + <kbd>R</kbd> - RESOURCES </p></li>    
-                    <li> <p> <kbd>Shift
-                        
-                    </kbd> + <kbd>T</kbd> - THEME [Unfinished] </p> </li>    
-                    <li> <p> <kbd>Shift</kbd> + <kbd>P</kbd> - PLAY [Unfinished] </p> </li>    
-                    <li> <p> <kbd>Shift</kbd> + <kbd>U</kbd> - MUTE [Unfinished] </p> </li>    
+                    <li> <p> <button id ="toggleTheme" onclick="toggleTheme()"> Toggle Dark Mode </button> </p>
                 </ul>
             </aside>
         </nav>
