--- a/public/Folding_In_Origami.html
+++ b/public/Folding_In_Origami.html
@@ -66,6 +66,18 @@
         }
     </style>
 
+     <header>
+
+            <h1> Oricentric </h1>
+            <h2> The Art of Folds </h2>
+          
+        </header>
+        
+        <section id="intro">
+            <h3> Oricentric: Unfolding a Colorful History </h3>
+            <p> As we further delve into Origami, you may have noticed many tutorials have different folds and sometimes use different materials along with paper such as sciscors, tape and glue. Now, we will discuss the different folding techniques and materials used in folding your masterpieces! </p>
+        </section>
+
     <section id="folds-section">
         <h2>Common Types of Folds</h2>
         <div class="grid folds">
@@ -128,7 +140,7 @@
 
      <nav class = "sidebar">
             <ul>
-                <li><a href="../index.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="History_Of_Origami.html">HISTORY OF ORIGAMI</a></li>
                 <li><a href="Origami_Exhibit.html">ORIGAMI EXHIBIT</a></li>
                 <li><a href="Folding_In_Origami.html">FOLDING IN ORIGAMI</a></li>
