--- a/public/History_Of_Origami.html
+++ b/public/History_Of_Origami.html
@@ -71,7 +71,7 @@
                 border-radius: 10px;
                 box-shadow: 0 4px 10px rgba(0,0,0,0.1);
                 object-fit: cover;
-                margin-bottom: 3rem;
+                margin: 1rem, 3rem;
             }
             .timeline-text {
                 flex: 2;
@@ -165,7 +165,7 @@
 
          <nav class = "sidebar">
             <ul>
-                <li><a href="../index.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="History_Of_Origami.html">HISTORY OF ORIGAMI</a></li>
                 <li><a href="Origami_Exhibit.html">ORIGAMI EXHIBIT</a></li>
                 <li><a href="Folding_In_Origami.html">FOLDING IN ORIGAMI</a></li>
@@ -193,7 +193,7 @@
         
         <section id="intro">
             <h3> Oricentric: Unfolding a Colorful History </h3>
-            <p> History Introduction </p>
+            <p> Part of understanding origami as a significant global impact is analyzing its history. We will explore the history of Origami, from its early origins and conception, to how it became what it is today. </p>
         </section>
 
         <section id="timeline-container" class="contentSection">
@@ -348,12 +348,6 @@
                     </div>
                 </article>
             </div>
-        </section>
-
-        <section id="finalMessage">
-            <p> 
-                Together, we will guide you on a exhilerating journey into the world of paper folding- from every crevice and fold lies a secret waiting to be told!
-            </p>
         </section>
 
         <footer>
