--- a/public/Folding_In_Origami.html
+++ b/public/Folding_In_Origami.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Oricentric</title>
+        <title>Oricentric: Folding Mechanisms</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="The home page of Oricentric">
@@ -145,6 +145,7 @@
                 <li><a href="Origami_Exhibit.html">ORIGAMI EXHIBIT</a></li>
                 <li><a href="Folding_In_Origami.html">FOLDING IN ORIGAMI</a></li>
                 <li><a href="References&Resources.html">RESOURCES</a></li>
+                <li><a href="Preferences_Forum.html">PREFERENCES</a></li>
             </ul>
            <aside class="hotkeys">
                 <h4> Hotkeys </h4>
@@ -154,7 +155,6 @@
                     <li> <p> <kbd>Shift</kbd> + <kbd>E</kbd> - EXHIBIT</p> </li>
                     <li> <p> <kbd>Shift</kbd> + <kbd>M</kbd> - MECHANISMS </p> </li>    
                     <li> <p> <kbd>Shift</kbd> + <kbd>R</kbd> - RESOURCES </p></li>    
-                    <li> <p> <button id ="toggleTheme" onclick="toggleTheme()"> Toggle Dark Mode </button> </p>
                 </ul>
             </aside>
         </nav>
