--- a/public/Preferences_Forum.html
+++ b/public/Preferences_Forum.html
@@ -52,7 +52,11 @@
         <h3>Home</h3>
         <p>
             Welcome to Oricentric- a website dedicated to allow art enthusiats, students, 
-            STEM advocates, learners, and everyone to explore the world of folding paper!
+            STEM advocates, learners, and everyone to explore the world of folding paper! 
+            The form on this site is here so we can get your choices and interests. By filling it out,
+            you help us know what kind of origami you want to see, whether it’s simple folds,
+            creative art pieces, or tough designs. Based on your answers, 
+            we’ll give you recommendations that fit your level and style.
         </p>
     </section>
 
