--- a/public/Recommendations.html
+++ b/public/Recommendations.html
@@ -64,6 +64,7 @@
             <h3>Home</h3>
             <p>
                 Welcome to the recommendations page! Here you may find curated lists of your preferences!
+                You may adjust your preferences in the preferences form, and expect that the recommendations will be updated accordingly !!
             </p>
         </section>
 
